# cv-app

./: .gitignore  AOI_SolderPaste_Measurement_DesignDoc.md  CLAUDE.md  README.md  main.py  pyproject.toml
data/: image_processing.csv
docs/: study-report-day1.md
notebooks/: code_review.ipynb
projects/01-aoi-solder-paste/: README.md
projects/01-aoi-solder-paste/src/: analyze_images.py  test_morphology.py
